//! Client for mvirt-vmm daemon.

use anyhow::Result;
use tracing::debug;

/// VM state from mvirt-vmm.
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub enum VmState {
    Creating,
    Running,
    Stopping,
    Stopped,
    Failed,
}

/// VM info from mvirt-vmm.
#[derive(Debug, Clone)]
pub struct VmInfo {
    pub id: String,
    pub name: String,
    pub state: VmState,
    pub pid: Option<u32>,
}

/// Client for interacting with mvirt-vmm.
pub struct VmmClient {
    endpoint: String,
}

impl VmmClient {
    pub fn new(endpoint: String) -> Self {
        Self { endpoint }
    }

    /// Check if connected to mvirt-vmm.
    pub async fn health_check(&self) -> Result<bool> {
        debug!("Health check for mvirt-vmm at {}", self.endpoint);
        // TODO: Implement actual health check
        Ok(true)
    }

    /// Get VM by ID.
    pub async fn get_vm(&self, id: &str) -> Result<Option<VmInfo>> {
        debug!("Getting VM {} from mvirt-vmm", id);
        // TODO: Implement via gRPC
        Ok(None)
    }

    /// Create a VM.
    pub async fn create_vm(
        &self,
        name: &str,
        cpu_cores: u32,
        memory_mb: u64,
        disk_path: &str,
        nic_socket: &str,
        image: &str,
    ) -> Result<VmInfo> {
        debug!("Creating VM {} in mvirt-vmm", name);
        // TODO: Implement via gRPC
        Ok(VmInfo {
            id: uuid::Uuid::new_v4().to_string(),
            name: name.to_string(),
            state: VmState::Creating,
            pid: None,
        })
    }

    /// Start a VM.
    pub async fn start_vm(&self, id: &str) -> Result<()> {
        debug!("Starting VM {} in mvirt-vmm", id);
        // TODO: Implement via gRPC
        Ok(())
    }

    /// Stop a VM.
    pub async fn stop_vm(&self, id: &str) -> Result<()> {
        debug!("Stopping VM {} in mvirt-vmm", id);
        // TODO: Implement via gRPC
        Ok(())
    }

    /// Delete a VM.
    pub async fn delete_vm(&self, id: &str) -> Result<()> {
        debug!("Deleting VM {} in mvirt-vmm", id);
        // TODO: Implement via gRPC
        Ok(())
    }
}
